<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewSkillDescription"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/skill_description"

                android:layout_weight="3"
                android:textSize="18sp"
                android:layout_marginStart="10sp"
                android:textColor="#222222"
                android:gravity="center|start"/>

        <CheckBox
            android:id="@+id/checkBoxComplete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/done"
            android:layout_marginEnd="8dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDeleteSubstep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/delete_icon"
            android:contentDescription="@string/add_skill" />

    </LinearLayout>

</androidx.cardview.widget.CardView>
