<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="12dp"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="72dp"
        android:padding="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:orientation="vertical">
        <!-- Skill Title -->
        <TextView
            android:id="@+id/textViewSkillName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skill_title"
            android:textSize="18sp"
            android:textColor="#222222"
            android:textStyle="bold" />

        <!-- Optional: Created date or progress -->
        <TextView
            android:id="@+id/textViewSkillProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/progress_0"
            android:textSize="14sp"
            android:textColor="#666666"
            android:layout_marginTop="4dp" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:max="100"
            android:progress="50"
                />


        </LinearLayout>
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabDeleteSkill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/delete_icon"
            android:contentDescription="@string/add_skill"
            />


    </LinearLayout>

</androidx.cardview.widget.CardView>
